<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_orange"
    android:padding="3dp" >

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginLeft="3dp"
        android:contentDescription="@string/content_description_launcher"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="7dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ad_custom_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ad_custom_text_big"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ad_custom_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/ad_custom_text_small"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
